deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: servicea
  name: servicea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicea
  template:
    metadata:
      labels:
        app: servicea
    spec:
      containers:
      - image: service-a-node-web-app
        name: servicea
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: servicea
  name: servicea
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: servicea
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: serviceb
  name: serviceb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serviceb
  template:
    metadata:
      labels:
        app: serviceb
    spec:
      containers:
      - image: service-b-node-web-app
        name: serviceb
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: serviceb
  name: serviceb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: serviceb
  type: ClusterIP
